dates/crashes/e5b39fb245d11a3436a26b5bbd2c7c94f99f1f7d/report6
EXT4-fs error (device loop0): ext4_orphan_get:1388: comm syz.0.319: couldn't read orphan inode 15 (err -117)
EXT4-fs (loop0): mounted filesystem without journal. Opts: ,errors=continue
==================================================================
BUG: KASAN: use-after-free in ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
Read of size 4 at addr ffff88801aaf9001 by task syz.0.319/6751

CPU: 0 PID: 6751 Comm: syz.0.319 Not tainted 5.10.0 #1
Hardware name: QEMU Ubuntu 24.04 PC (i440FX + PIIX, 1996), BIOS 1.16.3-debian-1.16.3-2 04/01/2014
Call Trace:
 __dump_stack lib/dump_stack.c:77 [inline]
 dump_stack+0x107/0x163 lib/dump_stack.c:118
 print_address_description.constprop.0+0x1c/0x210 mm/kasan/report.c:385
 __kasan_report mm/kasan/report.c:545 [inline]
 kasan_report.cold+0x37/0x7c mm/kasan/report.c:562
 ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
 ext4_rename+0x15b1/0x2640 fs/ext4/namei.c:3816
 ext4_rename2+0x1af/0x240 fs/ext4/namei.c:4109
 vfs_rename+0xf1b/0x1960 fs/namei.c:4310
 do_renameat2+0x732/0xb80 fs/namei.c:4457
 __do_sys_renameat2 fs/namei.c:4492 [inline]
 __se_sys_renameat2 fs/namei.c:4489 [inline]
 __x64_sys_renameat2+0xba/0x150 fs/namei.c:4489
 do_syscall_64+0x33/0x40 arch/x86/entry/common.c:46
 entry_SYSCALL_64_after_hwframe+0x44/0xa9
RIP: 0033:0x7ff82d5a2ef9
Code: ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 c7 c1 a8 ff ff ff f7 d8 64 89 01 48
RSP: 002b:00007ff82c21c038 EFLAGS: 00000246 ORIG_RAX: 000000000000013c
RAX: ffffffffffffffda RBX: 00007ff82d75af80 RCX: 00007ff82d5a2ef9
RDX: 0000000000000008 RSI: 0000000020000000 RDI: 0000000000000008
RBP: 00007ff82d615b76 R08: 0000000000000001 R09: 0000000000000000
R10: 0000000020000180 R11: 0000000000000246 R12: 0000000000000000
R13: 0000000000000000 R14: 00007ff82d75af80 R15: 00007ffed1df15a8

The buggy address belongs to the page:
page:00000000f95e8508 refcount:0 mapcount:0 mapping:0000000000000000 index:0x1 pfn:0x1aaf9
flags: 0x100000000000000()
raw: 0100000000000000 dead000000000100 dead000000000122 0000000000000000
raw: 0000000000000001 0000000000000000 00000000ffffffff 0000000000000000
page dumped because: kasan: bad access detected

Memory state around the buggy address:
 ffff88801aaf8f00: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
 ffff88801aaf8f80: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
>ffff88801aaf9000: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
                   ^
 ffff88801aaf9080: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
 ffff88801aaf9100: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
==================================================================
EXT4-fs (loop2): can't mount with journal_checksum, fs mounted w/o journal
EXT4-fs error (device loop2) in ext4_do_update_inode:5151: error 27
EXT4-fs error (device loop2): ext4_dirty_inode:5942: inode #3: comm syz.2.323: mark_inode_dirty error
EXT4-fs error (device loop2) in ext4_do_update_inode:5151: error 27
EXT4-fs error (device loop2): __ext4_ext_dirty:169: inode #3: comm syz.2.323: mark_inode_dirty error
__quota_error: 62 callbacks suppressed
Quota error (device loop2): write_blk: dquota write failed
Quota error (device loop2): qtree_write_dquot: Error -27 occurred while creating quota
EXT4-fs error (device loop2): mb_free_blocks:1506: group 0, inode 16: block 39:freeing already freed block (bit 39); block bitmap corrupt.
EXT4-fs error (device loop2): ext4_mb_generate_buddy:802: group 0, block bitmap and bg descriptor inconsistent: 43 vs 44 free clusters
EXT4-fs (loop2): 1 orphan inode deleted
EXT4-fs (loop2): mounting with "discard" option, but the device does not support discard
EXT4-fs (loop2): mounted filesystem without journal. Opts: ,errors=continue
ext4 filesystem being mounted at /64/file1 supports timestamps until 2038 (0x7fffffff)
